add refresh token model and authentication middleware; update API routes and client-side auth handling

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,13 @@
       "request": "launch",
       "name": "Launch Firefox",
       "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}"
+      "webRoot": "${workspaceFolder}",
+      "pathMappings": [
+        {
+          "url": "http://localhost:3000/_nuxt/middleware",
+          "path": "${workspaceFolder}/server/src/controllers"
+        }
+      ]
     }
   ],
   "compounds": [
