--- a/server/package.json
+++ b/server/package.json
@@ -25,10 +25,17 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/uuid": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.2.1",
+    "uuid": "^11.0.5"
   }
 }
