--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@vueuse/core": "^12.4.0",
     "chart.js": "^4.4.7",
+    "jwt-decode": "^4.0.0",
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-chartjs": "^5.3.2",
